--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lucide-react": "^0.344.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
-    "next": "^14.1.2-canary.1",
+    "next": "14.0.4",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
